# lab

circom-starter/: package.json
fib/: Cargo.toml  README.md
fib/src/: is_zero.rs
fib/src/fibo_circuit2/: fibo_chip.rs
halo2/: .gitignore  README.md
halo2/src/: decompose_range_check.rs  is_zero.rs  lib.rs  range_check.rs
halo2/src/decompose_range_check/: table.rs
halo2/src/fibo_circuit2/: fibo_chip.rs
halo2/src/range_check/: eg1_simple.rs  eg3_numbits.rs  example2.rs  example3.rs
halo2/src/range_check/eg3_numbits/: table.rs
halo2/src/range_check/example2/: table.rs
halo2/src/range_check/example3/: table.rs
halo2_book_example/: Cargo.toml
helloAZ/: Cargo.toml  lib.rs
helloLeo/: .gitignore
helloNoir/hello_world/proofs/: hello_world.proof
hello_zkp/src/: main.rs
learningReact/react-app/: package-lock.json
learningReact/react-app/src/: App.tsx  Message.tsx
learningReact/react-app/src/components/: ListGroup.tsx
learningRust/adder/src/: lib.rs
learningRust/minigrep/src/: lib.rs  main.rs  minigrep.rs
